--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -7,18 +7,20 @@
                 </div>
                 <div class='banner-title'>
                     <h2>José Hernández.</h2>
-                    <h3>Web Developer</h3>
+                    <h3>Frontend Developer</h3>
                 </div>
                 <div class='banner-description' >
                     <p class="mt-4">
-                        Soy desarollador web con 5 años de experiencia en desarrollo de sistemas, 
-                        bots y sitios web. Me gusta abordar proyectos con tecnologías basadas en Laravel, 
-                        Angular y Wordpress.
+
+                        Con 4 años de experiencia desarrollando sistemas, interfaces, bots y soluciones tecnologicas 
+                        para hacer de la web un lugar mejor. En mi trabajo me gusta liderar, proponer y ejecutar ideas, escribir
+                        y refactorizar codigo limpio, reutilizable y escalable.
+
                     </p>
                 </div>
             </div>
             <div class="div-btn-banner" >
-                <a href="mailto:joseandreshernandezross@gmail.com" class="main-btn">¡Saludame!</a>
+                <a href="mailto:joseandreshernandezross@gmail.com" target="_black" class="main-btn">¡Saludame!</a>
             </div>
         </div>
     </div>
