--- a/src/app/components/home/jobs/jobs.component.html
+++ b/src/app/components/home/jobs/jobs.component.html
@@ -7,62 +7,77 @@
                 </h3>
             </div>
             <ngb-tabset class="jobs-tabs" data-aos="fade-up" data-aos-duration="1000">
+              <ngb-tab title="Proyex">
+                <ng-template ngbTabContent>
+                    <h4 class='title-tab-content'>Fullstack developer | <span class="company-tab-content">Proyex</span></h4>
+                    <h5 class="job-time">Diciembre 2019 - Actualidad </h5>
+                    <p class="job-description">
+                        Creacion y mantención de una plataforma de monitorio con graficos en Wordpress. Programacion funcional 
+                        en plantillas y plugins para añadir las caracteristicas necesarias de monitorio.
+                        Implementacion de integracion continua y respaldos diarios. Creacion y mantencion de una
+                        segunda plataforma de Monitoreo Realizada en Angular, Angular Material, Laravel, Mysql, RxJS, Sass con graficos (configurables), sistema de alarmas, y gestion de usuarios
+                        y configuracion de parametros generales. Reuniones de planificación en informes.
+                    </p>
+                  <span></span>
+                </ng-template>
+              </ngb-tab>
+              <ngb-tab title="Freelancer">
+                <ng-template ngbTabContent>
+                    <h4 class='title-tab-content'>Independiente | <span class="company-tab-content">Freelancer</span></h4>
+                    <h5 class="job-time">Mayo 2016 - Actualidad</h5>
+                    <p class="job-description">
+                        Implementando mejoras contunuas, trabajando en frontend y backend. Creando plataformas
+                        con Angular, Laravel, ExpressJS, Wordpress programadas con paradigmas de programacion funcional, reactiva
+                        y orientada a objetos.
+                    </p>
+                  <span></span>
+                </ng-template>
+              </ngb-tab>
                 <ngb-tab title="Moebius">
                   <ng-template ngbTabContent>
-                      <h4 class='title-tab-content'>Programador FullStack <span class="company-tab-content">@ Moebius</span></h4>
-                      <h5 class="job-time">Abril 2020 - Actualidad</h5>
+                      <h4 class='title-tab-content'>FullStack developer | <span class="company-tab-content">Moebius</span></h4>
+                      <h5 class="job-time">Julio 2017 - Octubre 2018</h5>
                       <p class="job-description">
-                        Encargado del levantamiento de una aplicación web para gestión de datos turísticos. Las tecnologías bases involucradas en el desarrollo incluyen Laravel (API REST) y Angular en su versión 9. Mis tareas principales traducían las ideas del proyecto en interfaces funcionales, limpias y modernas. Constantes informes de actividades e interacción frecuente con el equipo para coordinar esfuerzos también son parte del trabajo del día a día para este sistema. Siempre encantado y apasionado desde el primer momento en todo el proceso de desarrollo
+                        Liderando un equipo de 4 personas en el desarrollo de una plataforma
+                        de gestion de Datos de turismo hecha en Angular, Laravel y MySQL. 
+                        Implementando CI/CD en Azure. Refactorizando y optimizando tiempos de carga
+                        de la aplicación. Codificación de peticiones a API con RxJS. Redaccion de informes
+                        semanales acerca de metas y planes.
                       </p>
                     <span></span>
                   </ng-template>
                 </ngb-tab>
-                <ngb-tab title="Proyex">
-                    <ng-template ngbTabContent>
-                        <h4 class='title-tab-content'>Analista de sistema <span class="company-tab-content">@ Proyex</span></h4>
-                        <h5 class="job-time">Enero 2019 - Octubre 2019 </h5>
-                        <p class="job-description">
-                            Mis tareas principales abarcaron el desarrollo de una aplicación web realizada en Laravel, cuya función principal consistía en procesar datos de consumo de aguas industriales que se almacenaban en bases de datos para luego presentar informes, gráficos y alertas con alarmas automatizadas. Este proceso de monitoreo de datos y bombas, era facilitado por un panel de geolocalizacion que estuve programando en OpenLayers. Otras tecnologías usadas en los requerimientos fueron blade, webpack, bootstrap y javascript.
-                        </p>
-                      <span></span>
-                    </ng-template>
-                  </ngb-tab>
                   <ngb-tab title="TechLatam">
                     <ng-template ngbTabContent>
-                        <h4 class='title-tab-content'>Frontend developer <span class="company-tab-content">@ TechLatam</span></h4>
-                        <h5 class="job-time">Julio 2018 - Diciembre 2018</h5>
+                        <h4 class='title-tab-content'>Frontend developer | <span class="company-tab-content">TechLatam</span></h4>
+                        <h5 class="job-time">Febrero 2016 - Mayo 2017</h5>
                         <p class="job-description">
-                            Mis habilidades como frontend fueron constantemente usadas en el periodo de tiempo que estuve como desarrollador en TechLatam. Mis principales funciones en este cargo eran maquetar sitios web, rendir informes diarios y mantener interacción con el equipo de trabajo. Estuve desarrollando diversas plantillas para wordpress (marco de desarrollo base para todas las web), utilizando tambien gulp, sass, bulma, git, entre otros. Un trabajo que disfrute de principio a fin.
+                            Creacion de plantillas de wordpress con ACF, programacion funcional en Javascript / jQuery,
+                            estilos en SASS, integracion de mejoras en diseño y tiempos de carga de plantillas.
+                            Comunicacion efectiva con equipo de diseño, trabajando con Avocode / Figma
                         </p>
                       <span></span>
                     </ng-template>
                   </ngb-tab>
                   <ngb-tab title="CANTV">
                     <ng-template ngbTabContent>
-                        <h4 class='title-tab-content'>Analista de sistema <span class="company-tab-content">@ CANTV</span></h4>
-                        <h5 class="job-time">Marzo 2017 - Mayo 2017</h5>
+                        <h4 class='title-tab-content'>Analista de sistema | <span class="company-tab-content">CANTV</span></h4>
+                        <h5 class="job-time">Noviembre 2015 - Diciembre 2016</h5>
                         <p class="job-description">
-                            CANTV es una de las empresas de telecomunicaciones mas grandes del país, en la estuve desempeñándome como analista de sistema encargado de dar soporte en equipo a una aplicación de gestión de solicitudes desarrollada en VB. Un cargo en el que el trabajo en equipo era fundamental.
+                            CANTV, empresas de telecomunicaciones mas grandes del país. Como asignaciones regulares, debia
+                            programar nuevas funcionalidades para una plataforma de gestion de empleados existente realizada en Angular y ExpressJS,
+                            Realizar refactorizacion de codigo antiguo. Asegurar la compatibilidad de cada dependencia en cada actualizacion, junto tambien
+                            con la actualizacion regular de Angular
                         </p>
                       <span></span>
                     </ng-template>
                   </ngb-tab>
                   <ngb-tab title="IEP">
                     <ng-template ngbTabContent>
-                        <h4 class='title-tab-content'>Profesor de Ingles <span class="company-tab-content">@ IEP</span></h4>
-                        <h5 class="job-time">Abril 2020 - Actualidad</h5>
+                        <h4 class='title-tab-content'>Profesor de Ingles | <span class="company-tab-content">IEP</span></h4>
+                        <h5 class="job-time">Enero 2015 - Julio 2015</h5>
                         <p class="job-description">
-                            En esta oportunidad ejercí mis conocimientos y habilidades de comunicación y enseñanza en función de instruir a mas de 200 alumnos en materia de Ingles Básico.
-                        </p>
-                      <span></span>
-                    </ng-template>
-                  </ngb-tab>
-                  <ngb-tab title="Workana">
-                    <ng-template ngbTabContent>
-                        <h4 class='title-tab-content'>Freelancer <span class="company-tab-content">@ Workana</span></h4>
-                        <h5 class="job-time">Mayo 2015 - Actualidad</h5>
-                        <p class="job-description">
-                            Mis inicios como programador empezaron con proyectos freelancer desde el año 2015, trabajando en diversos proyectos para distintas personas. Realice trabajos que iban desde bots para telegram y slack hasta blogs y tiendas virtuales con Wordpress y Joomla. En el transcurso de este tiempo como freelancer me he especializado en Laravel, Angular y Wordpress siendo los marcos de desarrollo principales bajo las cuales trabajo. También me especialice en tecnologías bases como Bootstrap, Materialize, Angular Material, TypeScript, Javascript, ecmascript, gulp, css. sass git, etc.
+                            Enseñando ingles a nivel basico a una matricula de mas de 200 alumnos.
                         </p>
                       <span></span>
                     </ng-template>
