--- a/src/app/components/home/about/about.component.html
+++ b/src/app/components/home/about/about.component.html
@@ -10,25 +10,27 @@
                 <div class="col-12 col-md-6 mb-4 mb-md-0">
                     <div class="about-description">
                         <p data-aos="fade-up" data-aos-duration="1000">
-                            ¡Hola! Soy José Hernández, web developer en Monagas, VE.
+                            En mis 4 años como desarrollador busco capacitarme cada dia. Al
+                            mismo tiempo he trabajado escribiendo pruebas unitarias, realizando integracion continua y tambien cubriendo roles
+                            de backend developer con Laravel, ExpressJS, Mysql y MongoDB. Tambien he liderado equipos
+                            teniendo empatia, ejerciendo motivación a compañeros y estableciendo planes y metas en conjunto.
                         </p>
                         <p data-aos="fade-up" data-aos-duration="1000">
-                            Disfruto cada dia mi trabajo como desarrollador brindando soluciones tecnologicas de cualquier tipo, desde paginas web, aplicaciones web y bots para slack, telegram o whatsapp para automatizacion de procesos.
-                        </p>
-                        <p data-aos="fade-up" data-aos-duration="1000">
-                            Acutalmente me encuentro estudiando Ingeneria de Sistemas en la IUP Santiago Mariño. Mas alla de mis estudios universitarios, mi pasion por la programacion me ha impulsado a capacitarme de manera autodidacta en tecnologías y procedimientos que usualmente
-                            no enseñan en las universidades regulares
+                            Mis capacidades tambien incluyen implementar mejoras en sistemas, optimizar sitios, estandarizar patrones y 
+                            sugerir y ejecutar ideas que añadan valor al proyecto en el que este trabajando
                         </p>
                         <p data-aos="fade-up" data-aos-duration="1000">
                             Algunas de las tecnologías en las que me he capacitado y trabajado incluyen (pero no se limitan) a:
                         </p>
                         <ul class="skills-list" data-aos="fade-up">
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">JavaScript (ES6+)</li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">HTML &amp; (S)CSS</li>
                             <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">Angular</li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">RxJS</li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">HTML &amp; (S)CSS</li>
                             <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">Laravel</li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">Node.js</li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">Express</li>
                             <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">WordPress</li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">Jasmine / Karma (TDD)</li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">CI / CD</li>
                         </ul>
                     </div>
                 </div>
