Poryects fixed, words fixed

--- a/src/app/components/home/about/about.component.html
+++ b/src/app/components/home/about/about.component.html
@@ -10,13 +10,13 @@
                 <div class="col-12 col-md-6 mb-4 mb-md-0">
                     <div class="about-description">
                         <p data-aos="fade-up" data-aos-duration="1000">
-                            En mis 4 años como desarrollador busco capacitarme cada dia. Al
-                            mismo tiempo he trabajado escribiendo pruebas unitarias, realizando integracion continua y tambien cubriendo roles
-                            de backend developer con Laravel, ExpressJS, Mysql y MongoDB. Tambien he liderado equipos
-                            teniendo empatia, ejerciendo motivación a compañeros y estableciendo planes y metas en conjunto.
+                            En mis 4 años como desarrollador busco capacitarme cada día. Al
+                            mismo tiempo he trabajado escribiendo pruebas unitarias, realizando integración continua y también cubriendo roles
+                            de backend developer con Laravel, ExpressJS, Mysql y MongoDB. También he liderado equipos
+                            teniendo empatía, ejerciendo motivación a compañeros y estableciendo planes y metas en conjunto.
                         </p>
                         <p data-aos="fade-up" data-aos-duration="1000">
-                            Mis capacidades tambien incluyen implementar mejoras en sistemas, optimizar sitios, estandarizar patrones y 
+                            Mis capacidades también incluyen implementar mejoras en sistemas, optimizar sitios, estandarizar patrones y 
                             sugerir y ejecutar ideas que añadan valor al proyecto en el que este trabajando
                         </p>
                         <p data-aos="fade-up" data-aos-duration="1000">
