--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -12,9 +12,9 @@
                 <div class='banner-description' >
                     <p class="mt-4">
 
-                        Con 4 años de experiencia desarrollando sistemas, interfaces, bots y soluciones tecnologicas 
+                        Con 4 años de experiencia desarrollando sistemas, interfaces, bots y soluciones tecnológicas 
                         para hacer de la web un lugar mejor. En mi trabajo me gusta liderar, proponer y ejecutar ideas, escribir
-                        y refactorizar codigo limpio, reutilizable y escalable.
+                        y refactorizar código limpio, reutilizable y escalable.
 
                     </p>
                 </div>
