--- a/src/app/components/home/contact/contact.component.html
+++ b/src/app/components/home/contact/contact.component.html
@@ -8,7 +8,7 @@
                 </h4>
             </div>
             <p data-aos="fade-up" data-aos-duration="1000">
-                Estaré encantado de recibir tu contacto si quieres conversar acerca de nuevas oportunidades. Escribeme, y te respondere tan pronto como vea tu mensaje.
+                Estaré encantado de recibir tu contacto si quieres conversar acerca de nuevas oportunidades. Escríbeme, y te responderé tan pronto como vea tu mensaje.
             </p>
             <div class="mt-5">
                 <a href="mailto:joseandreshernandezross@gmail.com" target="_blank" class="main-btn" data-aos="fade-up" data-aos-duration="1000">
