--- a/src/app/components/home/jobs/jobs.component.html
+++ b/src/app/components/home/jobs/jobs.component.html
@@ -12,11 +12,11 @@
                     <h4 class='title-tab-content'>Fullstack developer | <span class="company-tab-content">Proyex</span></h4>
                     <h5 class="job-time">Diciembre 2019 - Actualidad </h5>
                     <p class="job-description">
-                        Creacion y mantención de una plataforma de monitorio con graficos en Wordpress. Programacion funcional 
-                        en plantillas y plugins para añadir las caracteristicas necesarias de monitorio.
-                        Implementacion de integracion continua y respaldos diarios. Creacion y mantencion de una
-                        segunda plataforma de Monitoreo Realizada en Angular, Angular Material, Laravel, Mysql, RxJS, Sass con graficos (configurables), sistema de alarmas, y gestion de usuarios
-                        y configuracion de parametros generales. Reuniones de planificación en informes.
+                        Creación y mantenimiento de una plataforma de monitorio con gráficos en Wordpress. Programación funcional 
+                        en plantillas y plugins para añadir las características necesarias de monitorio.
+                        Implementación de integración continua y respaldos diarios. Creación y mantenimiento de una
+                        segunda plataforma de Monitoreo Realizada en Angular, Angular Material, Laravel, Mysql, RxJS, Sass con gráficos (configurables), sistema de alarmas, y gestión de usuarios
+                        y configuración de parámetros generales. Reuniones de planificación en informes.
                     </p>
                   <span></span>
                 </ng-template>
@@ -26,8 +26,8 @@
                     <h4 class='title-tab-content'>Independiente | <span class="company-tab-content">Freelancer</span></h4>
                     <h5 class="job-time">Mayo 2016 - Actualidad</h5>
                     <p class="job-description">
-                        Implementando mejoras contunuas, trabajando en frontend y backend. Creando plataformas
-                        con Angular, Laravel, ExpressJS, Wordpress programadas con paradigmas de programacion funcional, reactiva
+                        Implementando mejoras continuas, trabajando en frontend y backend. Creando plataformas
+                        con Angular, Laravel, ExpressJS, Wordpress programadas con paradigmas de programación funcional, reactiva
                         y orientada a objetos.
                     </p>
                   <span></span>
@@ -39,9 +39,9 @@
                       <h5 class="job-time">Julio 2017 - Octubre 2018</h5>
                       <p class="job-description">
                         Liderando un equipo de 4 personas en el desarrollo de una plataforma
-                        de gestion de Datos de turismo hecha en Angular, Laravel y MySQL. 
+                        de gestión de Datos de turismo hecha en Angular, Laravel y MySQL. 
                         Implementando CI/CD en Azure. Refactorizando y optimizando tiempos de carga
-                        de la aplicación. Codificación de peticiones a API con RxJS. Redaccion de informes
+                        de la aplicación. Codificación de peticiones a API con RxJS. Redacción de informes
                         semanales acerca de metas y planes.
                       </p>
                     <span></span>
@@ -52,9 +52,9 @@
                         <h4 class='title-tab-content'>Frontend developer | <span class="company-tab-content">TechLatam</span></h4>
                         <h5 class="job-time">Febrero 2016 - Mayo 2017</h5>
                         <p class="job-description">
-                            Creacion de plantillas de wordpress con ACF, programacion funcional en Javascript / jQuery,
-                            estilos en SASS, integracion de mejoras en diseño y tiempos de carga de plantillas.
-                            Comunicacion efectiva con equipo de diseño, trabajando con Avocode / Figma
+                            Creación de plantillas de wordpress con ACF, programación funcional en Javascript / jQuery,
+                            estilos en SASS, integración de mejoras en diseño y tiempos de carga de plantillas.
+                            Comunicación efectiva con equipo de diseño, trabajando con Avocode / Figma
                         </p>
                       <span></span>
                     </ng-template>
@@ -64,20 +64,20 @@
                         <h4 class='title-tab-content'>Analista de sistema | <span class="company-tab-content">CANTV</span></h4>
                         <h5 class="job-time">Noviembre 2015 - Diciembre 2016</h5>
                         <p class="job-description">
-                            CANTV, empresas de telecomunicaciones mas grandes del país. Como asignaciones regulares, debia
-                            programar nuevas funcionalidades para una plataforma de gestion de empleados existente realizada en Angular y ExpressJS,
-                            Realizar refactorizacion de codigo antiguo. Asegurar la compatibilidad de cada dependencia en cada actualizacion, junto tambien
-                            con la actualizacion regular de Angular
+                            CANTV, empresas de telecomunicaciones más grandes del país. Como asignaciones regulares, debía
+                            programar nuevas funcionalidades para una plataforma de gestión de empleados existente realizada en Angular y ExpressJS,
+                            Realizar refactorización de código antiguo. Asegurar la compatibilidad de cada dependencia en cada actualización, junto también
+                            con la actualización regular de Angular
                         </p>
                       <span></span>
                     </ng-template>
                   </ngb-tab>
                   <ngb-tab title="IEP">
                     <ng-template ngbTabContent>
-                        <h4 class='title-tab-content'>Profesor de Ingles | <span class="company-tab-content">IEP</span></h4>
+                        <h4 class='title-tab-content'>Profesor de Inglés | <span class="company-tab-content">IEP</span></h4>
                         <h5 class="job-time">Enero 2015 - Julio 2015</h5>
                         <p class="job-description">
-                            Enseñando ingles a nivel basico a una matricula de mas de 200 alumnos.
+                            Enseñando ingles a nivel básico a una matrícula de más de 200 alumnos.
                         </p>
                       <span></span>
                     </ng-template>
