--- a/src/app/components/home/proyects/proyects.component.html
+++ b/src/app/components/home/proyects/proyects.component.html
@@ -10,56 +10,62 @@
             <div class="d-flex proyect-container" data-aos="fade-up" data-aos-duration="1000">
                 <div class="img-feature-proyect-container">
                     <div>
-                        <img class='img-feature-proyect rounded' src="assets/images/abaco-proyect.png" alt="" width='600px'>
+                        <img class='img-feature-proyect rounded' src="assets/images/agrourbana.png" alt="" width='600px'>
                     </div>
                 </div>
-                <div class="proyect-info-right h-100" style="background-image: url('assets/images/abaco-proyect.png');">
+                <div class="proyect-info-right h-100" style="background-image: url('assets/images/agrourbana.png');">
                     <div class="proyect-box">
                             <h4 class="text-right feature-proyect">Proyecto Destacado</h4>
-                            <h5 class="text-right proyect-name">Abaco</h5>
+                            <h5 class="text-right proyect-name">Agrourbana</h5>
 
                             <div class="proyect-description-box">
-                                <p class="mb-0">Una aplicion web encargada de la gestion de datos de clientes y proveedores turistico. Su desarrollo fue junto al equipo de Moebius (Empresa Argentina de Turismo). Fui arquitecto de software como fullstack</p>
+                                <p class="mb-0">Aplicación de monitoreo realizada desde cero con módulo de auth, gráficos configurables, alarmas configurables y gestión de usuarios.
+                                    Cuenta también con lógica de formularios reactvios para la configuración de parámetros.
+                                </p>
                             </div>
                             <ul class="proyect-skills justify-content-end">
-                                <li class="ml-3">Laravel 5</li>
-                                <li class="ml-3">Angular 9</li>
+                                <li class="ml-3">Laravel</li>
+                                <li class="ml-3">Angular</li>
                                 <li class="ml-3">SASS</li>
-                                <li class="ml-3">Materialize</li>
-                                <li class="ml-3">GIT</li>
+                                <li class="ml-3">Angular Material</li>
+                                <li class="ml-3">RxJS</li>
                             </ul>
                             <div class="proyect-links text-right">
-                                <!-- <i class="ml-3 fab fa-github"></i> -->
-                                <a style='color: inherit' href="https://abaco.luzzidigital.fav" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                                <a style='color: inherit' href="https://github.com/andresjosehr/agrourbana" target="_blank"><i class="ml-3 fab fa-github"></i></a>
+                                <a style='color: inherit' href="https://andresjosehr.github.io/agrourbana" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
                             </div>
                     </div>
                 </div>
             </div>
             
             <div class="d-flex proyect-container" data-aos="fade-up" data-aos-duration="1000">
-                <div class="proyect-info-left h-100" style="background-image: url('assets/images/cronometraje-proyect.png')">
+                <div class="proyect-info-left h-100" style="background-image: url('assets/images/hands-game.png')">
                     <div class="proyect-box">
                             <h4 class="text-left feature-proyect">Proyecto Destacado</h4>
-                            <h5 class="text-left proyect-name">Cronometraje</h5>
+                            <h5 class="text-left proyect-name">Hands game</h5>
 
                             <div class="proyect-description-box">
-                                <p class="mb-0">Una Aplicación web desarrollada para la gestion de datos deportivos para una empresa Argentina. Me encargue del desarrollo en todos los aspectos, desde la planificacion hasta la ejecucion, empezando por el frontend y recorriendo toda su arquitectura hasta la base de datos</p>
+                                <p class="mb-0">
+                                    Juego de piedra papel y tijeras extendido. Un proyecto personal desarrollado en angular
+                                    en el que juegas al azar contra la máquina. Cuenta con la utilización de servicios, interfaces y componentes
+
+                                </p>
                             </div>
                             <ul class="proyect-skills justify-content-star">
-                                <li class="mr-3">Laravel 5</li>
-                                <li class="mr-3">Webpack</li>
-                                <li class="mr-3">Bootstrap</li>
-                                <li class="mr-3">Git</li>
+                                <li class="mr-3">Angular</li>
+                                <li class="mr-3">CSS GRID</li>
+                                <li class="mr-3">SASS</li>
+                                <li class="mr-3">Angular animations</li>
                             </ul>
                             <div class="proyect-links text-left">
-                                <a style='color: inherit' href="https://github.com/andresjosehr/Cronometraje" target="_blank"><i class="ml-3 fab fa-github"></i></a>
-                                <a style='color: inherit' href="https://cronometraje.luzzidigital.fav" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                                <a style='color: inherit' href="https://github.com/andresjosehr/hands-game" target="_blank"><i class="ml-3 fab fa-github"></i></a>
+                                <a style='color: inherit' href="https://andresjosehr.github.io/hands-game" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
                             </div>
                     </div>
                 </div>
                 <div class="img-feature-proyect-container" data-aos="fade-up" data-aos-duration="1000">
                     <div class="img-feature-proyect-box">
-                        <img class='img-feature-proyect rounded' src="assets/images/cronometraje-proyect.png" alt="" width='600px'>
+                        <img class='img-feature-proyect rounded' src="assets/images/hands-game.png" alt="" width='600px'>
                     </div>
                 </div>
             </div>
@@ -67,27 +73,29 @@
             <div class="d-flex proyect-container" data-aos="fade-up" data-aos-duration="1000">
                 <div class="img-feature-proyect-container">
                     <div class="img-feature-proyect-box">
-                        <img class='img-feature-proyect rounded' src="assets/images/tugo-proyect.png" alt="" width='600px'>
+                        <img class='img-feature-proyect rounded' src="assets/images/countries-viewer.png" alt="" width='600px'>
                     </div>
                 </div>
-                <div class="proyect-info-right h-100" style="background-image: url('assets/images/tugo-proyect.png');">
+                <div class="proyect-info-right h-100" style="background-image: url('assets/images/countries-viewer.png');">
                     <div class="proyect-box">
                             <h4 class="text-right feature-proyect">Proyecto Destacado</h4>
-                            <h5 class="text-right proyect-name">Tugo</h5>
+                            <h5 class="text-right proyect-name">Countries viewer</h5>
 
                             <div class="proyect-description-box">
-                                <p class="mb-0">Sitio web desarrollado para una startup de mochileros. Realizada bajo la direccion del equipo de TechLatam (Empresa en la cual trabaje como frontend). De igual manera, la mayor parte del proyecto tuvo que ver con desarrollo frontend</p>
+                                <p class="mb-0">
+                                    Interfaz que consume una API de países con el que se pueden visualizar lista de países, ver detalles de cada país,
+                                    filtrar por nombre y región. Ademas cuenta con un dark mode para alternar entre el tema oscuro y el claro
+                                </p>
                             </div>
                             <ul class="proyect-skills justify-content-end">
-                                <li class="ml-3">Wordpress codex</li>
-                                <li class="ml-3">Gulp</li>
-                                <li class="ml-3">Bulma</li>
+                                <li class="ml-3">Angular</li>
+                                <li class="ml-3">RxJS</li>
                                 <li class="ml-3">SASS</li>
-                                <li class="ml-3">GIT</li>
+                                <li class="ml-3">API</li>
                             </ul>
                             <div class="proyect-links text-right">
-                                <a style='color: inherit' href="https://github.com/andresjosehr/Tugo" target="_blank"><i class="ml-3 fab fa-github"></i></a>
-                                <a style='color: inherit' href="https://tugo.luzzidigital.fav" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                                <a style='color: inherit' href="https://github.com/andresjosehr/countries-viewer" target="_blank"><i class="ml-3 fab fa-github"></i></a>
+                                <a style='color: inherit' href="https://andresjosehr.github.io/countries-viewer" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
                             </div>
                     </div>
                 </div>
