--- a/src/app/components/home/more-proyects/more-proyects.component.html
+++ b/src/app/components/home/more-proyects/more-proyects.component.html
@@ -15,16 +15,20 @@
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="https://pollero.luzzidigital.fav" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
-                                    <a style='color: inherit' href="https://github.com/andresjosehr/ElPollero" target="_blank"><i class="ml-4 fab fa-github"></i></a>                                    
+                                    <a style='color: inherit' href="https://andresjosehr.github.io/pokemon-angular" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="https://github.com/andresjosehr/pokemon-angular" target="_blank"><i class="ml-4 fab fa-github"></i></a>                                    
                                 </div>
-                                <h5 class="other-proyect-title mt-4">El Pollero</h5>
-                                <p class="other-proyect-description">Aplicacion para gestion de ventas de pollo, abarcando la planificacion y programación del proyecto. Fue realmente rapido el desarrollo, entregandolo al cliente en un periodo de dos semanas a partir del momento en que se empezo a desarrollar.</p>
+                                <h5 class="other-proyect-title mt-4">Pokemon</h5>
+                                <p class="other-proyect-description">
+                                    Buscador de pokemons que utiliza la pokeapi. Se usó programación orientada a objetos para organizar la información
+                                    de los pokemons junto con su respectiva imagen
+                                </p>
                             </div>
                             <div>
                                 <ul class="more-proyects-skills">
-                                    <li>Laravel</li>
-                                    <li>Webpack</li>
+                                    <li>Angular</li>
+                                    <li>RxJs</li>
+                                    <li>API</li>
                                     <li>Bootstrap</li>
                                 </ul>
                             </div>
@@ -37,38 +41,22 @@
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="https://github.com/andresjosehr/ElPollero" target="_blank"><i class="ml-4 fab fa-github"></i></a>                                    
+                                    <a style='color: inherit' href="https://andresjosehr.github.io/coming-soon-page/" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="https://github.com/andresjosehr/coming-soon-page" target="_blank"><i class="ml-4 fab fa-github"></i></a>                                    
                                 </div>
-                                <h5 class="other-proyect-title mt-4">Workbot</h5>
-                                <p class="other-proyect-description">Este es un bot de telegram desarrollado bajo la arquitectura de laravel. Un proyecto personal que surgio de la necesidad de poder tener notificaciones en tiempo real de workana para saber acerca de nuevos proyectos.</p>
+                                <h5 class="other-proyect-title mt-4">Coming soon page</h5>
+                                <p class="other-proyect-description">
+                                    Proyecto personal de una página dividida de dos columnas para ser usado como "Coming soon page".
+                                    Programada para ser totalmente responsive design. Cuenta con un campo de formulario para 
+                                    suscribirse por correo electrónico
+                                </p>
                             </div>
                             <div>
                                 <ul class="more-proyects-skills">
-                                    <li>Laravel</li>
-                                    <li>Guzzle</li>
-                                    <li>Tlgm API</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
-                        <div class="more-proyect-box">
-                            <div class="row w-100 text-left m-0 p-0">
-                                <div class="col-6 p-0">
-                                    <img src='assets/icons/folder.svg' width="40">
-                                </div>
-                                <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="https://switchx-wallet.luzzidigital.fav/"><i class="ml-4 fas fa-external-link-alt"></i></a>
-                                    <a style='color: inherit' href="https://github.com/andresjosehr/Switchx_wallet_plantilla"><i class="ml-4 fab fa-github"></i></a>                                    
-                                </div>
-                                <h5 class="other-proyect-title mt-4">Switchx Wallet</h5>
-                                <p class="other-proyect-description">Sitio web realizado para una startup de criptomonedas. El desarrollo fue mayormente en parte de frontend, aunque en ciertas medidas era necesario tener conocimientos de PHP</p>
-                            </div>
-                            <div>
-                                <ul class="more-proyects-skills">
-                                    <li>Wordpress</li>
-                                    <li>Bulma</li>
+                                    <li>Angular</li>
                                     <li>SASS</li>
+                                    <li>CSS GRID</li>
+                                    <li>Reactive form</li>
                                 </ul>
                             </div>
                         </div>
@@ -80,16 +68,75 @@
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="http://artnevents.luzzidigital.fav/"><i class="ml-4 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="https://andresjosehr.github.io/fourd-card-feature-section/" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="https://github.com/andresjosehr/fourd-card-feature-section" target="_blank"><i class="ml-4 fab fa-github"></i></a>                                    
                                 </div>
-                                <h5 class="other-proyect-title mt-4">Artnevents</h5>
-                                <p class="other-proyect-description">Se basa en un sistema para una startup que se encarga de conectar artistas con cazadores de talentos. Cuenta con una landingpage y un dashboard para todos los roles de usuario</p>
+                                <h5 class="other-proyect-title mt-4">Four card feature section</h5>
+                                <p class="other-proyect-description">
+                                    Una sola página que cuenta con un diseño minimalista que enumera 
+                                    4 características en 4 cards. Se usan animaciones de entrada
+                                    con angular animations
+                                </p>
                             </div>
                             <div>
                                 <ul class="more-proyects-skills">
-                                    <li>Wordpress</li>
-                                    <li>Bootstrap</li>
-                                    <li>CSS</li>
+                                    <li>Angular</li>
+                                    <li>SASS</li>
+                                    <li>CSS GRID</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
+                        <div class="more-proyect-box">
+                            <div class="row w-100 text-left m-0 p-0">
+                                <div class="col-6 p-0">
+                                    <img src='assets/icons/folder.svg' width="40">
+                                </div>
+                                <div class="col-6 d-flex p-0 justify-content-end">
+                                    <a style='color: inherit' href="https://andresjosehr.github.io/testimonials-slider-app" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="https://github.com/andresjosehr/testimonials-slider-app" target="_blank"><i class="ml-4 fab fa-github"></i></a>                                    
+                                </div>
+                                <h5 class="other-proyect-title mt-4">Testimonial slider</h5>
+                                <p class="other-proyect-description">
+                                    Diseño de una sola página que cuenta que dos testimonios que hacen transición en un slider programado en angular.
+                                    Los datos de los testimonios son consultados una API desarrollada en ExpressJS almacenada en Heroku
+                                    que obtiene los datos de una base de datos MongoDB
+                                </p>
+                            </div>
+                            <div>
+                                <ul class="more-proyects-skills">
+                                    <li>Angular</li>
+                                    <li>ExpressJS</li>
+                                    <li>MongoDB</li>
+                                    <li>Angular animations</li>
+                                    <li>CSS GRID</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
+                        <div class="more-proyect-box">
+                            <div class="row w-100 text-left m-0 p-0">
+                                <div class="col-6 p-0">
+                                    <img src='assets/icons/folder.svg' width="40">
+                                </div>
+                                <div class="col-6 d-flex p-0 justify-content-end">
+                                    <a style='color: inherit' href="https://andresjosehr.github.io/article-preview-app" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="https://github.com/andresjosehr/article-preview-app" target="_blank"><i class="ml-4 fab fa-github"></i></a>
+                                </div>
+                                <h5 class="other-proyect-title mt-4">Article preview</h5>
+                                <p class="other-proyect-description">
+                                    Componente de preview de un artículo. Se desarrolló en angular y los datos son consultados a través de una API 
+                                    desarrollada en NodeJS y los datos se encuentran almacenados en una base de datos MongoDB
+                                </p>
+                            </div>
+                            <div>
+                                <ul class="more-proyects-skills">
+                                    <li>Angular</li>
+                                    <li>ExpressJS</li>
+                                    <li>MongoDB</li>
+                                    <li>CSS GRID</li>
                                 </ul>
                             </div>
                         </div>
@@ -101,15 +148,19 @@
                                     <img  src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="https://github.com/andresjosehr/cofascraper"><i class="ml-4 fab fa-github"></i></a>
+                                    <a style='color: inherit' href="https://andresjosehr.github.io/social-proof-section" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="https://github.com/andresjosehr/social-proof-section" target="_blank"><i class="ml-4 fab fa-github"></i></a>
                                 </div>
-                                <h5 class="other-proyect-title mt-4">Cofascraper</h5>
-                                <p class="other-proyect-description">Un proyecto personal realizado en laravel que surgio de la necesidad de descargar una gran cantidad de contenido multimedia. Un web scrapping que hace dicho trabajo</p>
+                                <h5 class="other-proyect-title mt-4">Social proof section</h5>
+                                <p class="other-proyect-description">Proyecto personal de una página diseñada a partir de un diseño hecho en figma.
+                                    Se utilizó angular para el desarrollo junto con SASS y CSS GRID
+                                </p>
                             </div>
                             <div>
                                 <ul class="more-proyects-skills">
-                                    <li>Laravel</li>
-                                    <li>Guzzle</li>
+                                    <li>Angular</li>
+                                    <li>CSS GRID</li>
+                                    <li>GIT</li>
                                 </ul>
                             </div>
                         </div>
@@ -121,14 +172,43 @@
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="http://luzzudigital.luzzidigital.fav/"><i class="ml-4 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="https://github.com/andresjosehr/faq-accordion" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="https://andresjosehr.github.io/faq-accordion" target="_blank"><i class="ml-4 fab fa-github"></i></a>
                                 </div>
-                                <h5 class="other-proyect-title mt-4">Luzzidigital</h5>
-                                <p class="other-proyect-description">Proyecto desarrollado para una marca personal de margeting digital. Desarrollada aprovechando las bondades que ofrecen los plugins de wordpress para este fin</p>
+                                <h5 class="other-proyect-title mt-4">FAQ accordion card</h5>
+                                <p class="other-proyect-description">
+                                    Acordeón de preguntas frecuentes con lógica y animnaciones realizadas en Angular
+                                </p>
                             </div>
                             <div>
                                 <ul class="more-proyects-skills">
-                                    <li>Wordpress</li>
+                                    <li>Angular</li>
+                                    <li>CSS GRID</li>
+                                    <li>Angular animations</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
+                        <div class="more-proyect-box">
+                            <div class="row w-100 text-left m-0 p-0">
+                                <div class="col-6 p-0">
+                                    <img src='assets/icons/folder.svg' width="40">
+                                </div>
+                                <div class="col-6 d-flex p-0 justify-content-end">
+                                    <a style='color: inherit' href="https://andresjosehr.github.io/profile-card-component" target="_blank"><i class="ml-4 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="https://github.com/andresjosehr/profile-card-component" target="_blank"><i class="ml-4 fab fa-github"></i></a>
+                                </div>
+                                <h5 class="other-proyect-title mt-4">Profile card</h5>
+                                <p class="other-proyect-description">
+                                    Simple diseño de una página que cuenta con una carta de perfil con información básica de una persona
+                                </p>
+                            </div>
+                            <div>
+                                <ul class="more-proyects-skills">
+                                    <li>Angular</li>
+                                    <li>SASS</li>
+                                    <li>GIT</li>
                                 </ul>
                             </div>
                         </div>
@@ -136,9 +216,9 @@
                 </div>
                 
             </div>
-            <div class="w-100 text-center mt-5 pt-5">
+            <!-- <div class="w-100 text-center mt-5 pt-5">
                 <a [routerLink]="'/proyectos'" class='main-btn'>Ver todo</a>
-            </div>
+            </div> -->
         </div>
     </div>
 </section>
