Changes made in banner

--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -1,7 +1,7 @@
 <section class="section banner">
     <div class="container">
         <div class="section-box-banner" [@aniBoton]='state' *ngIf='state'>
-            <div>
+            <div class="content">
                 <div>
                     <h1>Hola, mi nombre es</h1>
                 </div>
