--- a/src/app/components/home/banner/banner.component.scss
+++ b/src/app/components/home/banner/banner.component.scss
@@ -12,6 +12,10 @@
             display: table-cell;
             vertical-align: middle;
 
+            .content{
+                margin-top: 98px;
+            }
+
             h1{
     
                 color: #64ffda;
